--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "formik": "^2.2.9",
+    "jose": "^4.14.4",
+    "jsonschema": "^1.4.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.3.2",
+    "pg": "^8.10.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-redux": "^8.0.5",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.1.1"
   }
 }
