--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "capstone-two",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^6.0.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "formik": "^2.2.9",
